fixed breakpoint to 39.97em to break on 960px

--- a/ch-3/assets/css/main.css
+++ b/ch-3/assets/css/main.css
@@ -257,7 +257,7 @@ footer {
   Media Queries
   ============================================================*/
 
-@media screen and (max-width: 40em) {
+@media screen and (max-width: 39.97em) {
 
 header {
   width: 100%;
